@@ -3,6 +3,8 @@ package org.example.back_end.service.impl;
 import lombok.RequiredArgsConstructor;
 import org.example.back_end.dto.JobDTO;
 import org.example.back_end.entity.Job;
+import org.example.back_end.exception.ResourceAlreadyFoundException;
+import org.example.back_end.exception.ResourceNotFoundException;
 import org.example.back_end.repository.JobRepository;
 import org.example.back_end.service.JobService;
 import org.modelmapper.ModelMapper;
@@ -12,6 +14,7 @@ import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -19,24 +22,42 @@ public class JobServiceImpl implements JobService {
     private final JobRepository jobRepository;
     private final ModelMapper modelMapper;
 
-
     @Override
     public void saveJob(JobDTO jobDTO) {
-        jobRepository.save(modelMapper.map(jobDTO, Job.class));
-    }
+        if (jobRepository.existsById(jobDTO.getId())) {
+            throw new ResourceAlreadyFoundException(" already exists");
+        }
+        // jobRepository.save(modelMapper.map(jobDTO, Job.class));
+        throw new ResourceAlreadyFoundException(" already exists");
+        }
+//    @Override
+//    public void updateJob(JobDTO jobDTO) {
+//        jobRepository.save(modelMapper.map(jobDTO, Job.class));
+//    }
     @Override
     public void updateJob(JobDTO jobDTO) {
+        if (!jobRepository.existsById(jobDTO.getId())) {
+            throw new ResourceNotFoundException("Cannot update. Job with ID " + jobDTO.getId() + " not found");
+        }
+
         jobRepository.save(modelMapper.map(jobDTO, Job.class));
     }
     @Override
     public List<JobDTO> getAllJobs() {
-        return jobRepository.findAll()
-                .stream()
+        List<Job> jobs = jobRepository.findAll();
+        if (jobs.isEmpty()) {
+            throw new ResourceNotFoundException("No jobs found");
+        }
+        return jobs.stream()
                 .map(job -> modelMapper.map(job, JobDTO.class))
-                .toList();
+                .collect(Collectors.toList());
     }
     @Override
     public void changeJobStatus(String id) {
+        if (!jobRepository.existsById(Integer.parseInt(id))) {
+            throw new ResourceNotFoundException("Cannot change status. Job with ID " + id + " not found");
+        }
+
         jobRepository.updateJobStatus(id);
     }
 
